@@ -1,10 +1,9 @@
 <?xml version="1.0"?>
 <object name="Topic">
  <alias from="(Default)" to="topic_view"/>
- <alias from="criteria.html" to="topic_criteria_form"/>
- <alias from="edit.html" to="folder_contents"/>
+ <alias from="criteria" to="topic_criteria_form"/>
+ <alias from="folder_contents" to=""/>
  <alias from="index.html" to="topic_view"/>
- <alias from="properties.html" to="topic_edit_form"/>
- <alias from="view.html" to="topic_view"/>
+ <alias from="properties" to="topic_edit_form"/>
  <alias from="view" to="topic_view"/>
 </object>
