@@ -4,6 +4,8 @@ Products.CMFTopic Changelog
 2.3.0 (unreleased)
 ------------------
 
+- profiles: Modified Method Aliases used in type Actions.
+
 - Browser views are now used by default. An additional setup profile allows you
   to hook up the oldstyle skins and to make customizations TTW.
 
